# pgupv

./: .gitignore  CMakeLists.txt  PGRenderCore - Documentación de Usuario.md  README.md  leeme.txt
PGRenderCore/: CMakeLists.txt
PGRenderCore/include/PGRenderCore/: backendType.h  bufferObject.h  context.h  contextDesc.h  core.h  debugManager.h  device.h  pipeline.h  raytracingStructures.h  renderPass.h  renderTarget.h  sampler.h  shader.h  stateConstants.h  texture.h  vertexArray.h  vertexLayout.h
PGRenderCore/src/: vertexLayout.cpp
PGRenderCoreApp/: CMakeLists.txt
PGRenderCoreApp/include/: application.h  events.h  myApplication.h  renderer.h
PGRenderCoreApp/src/: application.cpp  main.cpp  myApplication.cpp
PGRenderCoreFactory/: CMakeLists.txt
PGRenderCoreFactory/include/PGRenderCoreFactory/: deviceFactory.h
PGRenderCoreFactory/src/: deviceFactory.cpp
PGRenderCoreGL/: CMakeLists.txt
PGRenderCoreGL/include/PGRenderCoreGL/: bufferObjectGL.h  contextGL.h  debugManagerGL.h  deviceGL.h  pipelineGL.h  renderPassGL.h  renderTargetGL.h  samplerGL.h  shaderGL.h  textureGL.h  vertexArrayGL.h
PGRenderCoreGL/src/: bufferObjectGL.cpp  contextGL.cpp  debugManagerGL.cpp  deviceGL.cpp  pipelineGL.cpp  renderPassGL.cpp  renderTargetGL.cpp  samplerGL.cpp  shaderGL.cpp  textureGL.cpp  vertexArrayGL.cpp
PGUPV/: CMakeLists.txt
PGUPV/include/: HW.h  animatorController.h  app.h  assimpWrapper.h  baseRenderer.h  boundingVolumes.h  camerahandler.h  directionWidget.h  drawCommand.h  events.h  fileChooserWidget.h  font.h  geoTiff.h  glStateCache.h  image.h  ivecSliderWidget.h  lifetimeManager.h  lightSourceWidget.h  listBoxWidget.h  mesh.h  pbrLightSourceWidget.h  properties.h  renderer.h  sceneGraphEditor.h  stockPrograms.h  texture.h  texture2DGeneric.h  textureCubeMap.h  textureVideo.h  uboPBRLightSources.h  utils.h  videoDevice.h  videoFile.h  window.h
PGUPV/src/: animatorController.cpp  app.cpp  assimpWrapper.cpp  baseRenderer.cpp  boundingVolumes.cpp  bufferRenderer.cpp  button.cpp  cameraHandler.cpp  commandLineProcessor.cpp  directionWidget.cpp  events.cpp  fileChooserWidget.cpp  fileLoader.cpp  fileStats.cpp  font.cpp  geotiff.cpp  glStateCache.cpp  image.cpp  intSliderWidget.cpp  interpolators.cpp  intervals.cpp  log.cpp  media.cpp  mesh.cpp  outputStreamStats.cpp  program.cpp  renderHelpers.cpp  sdlAdapter.cpp  stockModels.cpp  stockModels2.cpp  stockPrograms.cpp  textOverlay.cpp  texture.cpp  texture2DGeneric.cpp  textureCubeMap.cpp  textureText.cpp  textureVideo.cpp  uboPBRLightSources.cpp  utils.cpp  videoDevice.cpp  (+2 more)
assets/data_gis/: leeme.txt
assets/models/: readme.txt
assets/shaders/: touchpixels.frag  touchpixels.vert
examples/: CMakeLists.txt
examples/ej1-1/: CMakeLists.txt  main.cpp  passthrough.vert
examples/ej1-2/: CMakeLists.txt  main.cpp
examples/ej1-3/: CMakeLists.txt  main.cpp
examples/ej1-4/: CMakeLists.txt  main.cpp
examples/ej1-5/: CMakeLists.txt  main.cpp
examples/ej10-1/: CMakeLists.txt  main.cpp  pbr.frag  pbr.vert
examples/ej2-1/: CMakeLists.txt  main.cpp
examples/ej2-2/: CMakeLists.txt  main.cpp
examples/ej2-3/: CMakeLists.txt  main.cpp
examples/ej2-4/: CMakeLists.txt  main.cpp
examples/ej2-5/: CMakeLists.txt  main.cpp
examples/ej2-6/: CMakeLists.txt  main.cpp
examples/ej3-1/: CMakeLists.txt  main.cpp
examples/ej3-2/: CMakeLists.txt  ej3-2.frag  ej3-2.vert  main.cpp
examples/ej3-3/: CMakeLists.txt  main.cpp  texture2DArray.frag
examples/ej3-4/: CMakeLists.txt  main.cpp
examples/ej4-1/: CMakeLists.txt  main.cpp
examples/ej4-2/: CMakeLists.txt  main.cpp
examples/ej5-1/: CMakeLists.txt  main.cpp  textureReplace2.frag  textureReplace2.vert
examples/ej5-2/: CMakeLists.txt  gouraud.vert  main.cpp  ubo-dummy.vert
examples/ej5-3/: CMakeLists.txt  main.cpp  ubo-dummy.frag
examples/ej6-1/: CMakeLists.txt  ej6-1.frag  ej6-1.geom  ej6-1.vert  main.cpp
examples/ej6-2/: CMakeLists.txt  ej6-2.geom  ej6-2.vert  main.cpp
examples/ej6-3/: CMakeLists.txt  ej6-3.geom  ej6-3.vert  main.cpp
examples/ej6-4/: CMakeLists.txt  ej6-4.geom  ej6-4.vert  main.cpp
examples/ej6-5/: CMakeLists.txt  ej6-5.geom  ej6-5.vert  main.cpp
examples/ej7-1/: CMakeLists.txt  main.cpp  shader.frag  shader.tesc  shader.tese  shader.vert
examples/ej7-2/: CMakeLists.txt  isolines-points.tese  isolines.tesc  isolines.tese  main.cpp  quads.tesc  quads.tese  shader.frag  shader.vert  triangles.tesc  triangles.tese
examples/ej7-3/: CMakeLists.txt  main.cpp  shader-es.tese  shader-fes.tese  shader-fos.tese  shader.frag  shader.tesc  shader.vert
examples/ej7-4/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
examples/ej8-1/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
examples/ej8-2/: CMakeLists.txt  main.cpp  reflect.frag  reflect.vert
examples/ej8-3/: CMakeLists.txt  main.cpp  reflect2.frag  reflect2.vert
examples/ej9-1/: CMakeLists.txt  main.cpp
examples/ej9-2/: CMakeLists.txt  main.cpp
examples/gui/: CMakeLists.txt  main.cpp
exercises/: CMakeLists.txt
exercises/p0/: CMakeLists.txt  main.cpp
exercises/p1/: CMakeLists.txt  glmReader.h  gmlReader.cpp  gmlReader.h  main.cpp
exercises/p10/: CMakeLists.txt  main.cpp  pbr-mat.frag
exercises/p1a/: CMakeLists.txt
exercises/p1b/: CMakeLists.txt  gmlReader.h  main.cpp
exercises/p2/: CMakeLists.txt  kmlReader.cpp  kmlReader.h  main.cpp
exercises/p3/: CMakeLists.txt  main.cpp
exercises/p4/: CMakeLists.txt  main.cpp
exercises/p5/: CMakeLists.txt  main.cpp
exercises/p6/: CMakeLists.txt  main.cpp  p6.frag  p6.vert
exercises/p7/: CMakeLists.txt  main.cpp  shader.frag  shader.tesc  shader.tese  shader.vert
exercises/p8/: CMakeLists.txt  main.cpp  p8.frag  p8.vert
exercises/p9/: CMakeLists.txt  main.cpp
guipg/: CMakeLists.txt  guipg.cpp  guipg.vcxproj  guipg.vcxproj.filters
guipg/include/: guipg.h  vGizmo3D.h  vGizmo3D_config.h
